[package]
name = "myapp"
version = "0.1.0"
authors = ["davidedelpapa <davidedelpapa@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
rand = "0.8.5"
tokio = { version = "1.0", features = ["full"] }
